# www

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  astro.config.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.mjs  tsconfig.json
.github/: dependabot.yml
.github/workflows/: yew.yml
.trunk/: trunk.yaml
src/: main.rs
src/components/: Button.svelte  Card.svelte  CrewDisplay.svelte  Footer.svelte  GameLogo.svelte  Logo.svelte  Nav.svelte  Socials.svelte
src/data/: contact.json  crew.json  metadata.json  socials.json
src/layouts/: Layout.astro  Layout.svelte
src/pages/: about.astro  about.rs  blog.rs  contact.astro  contribute.astro  crew.astro  index.astro  index.rs  mod.rs  not_found.rs
src/pages/crew/: h4rl.astro  index.astro  intancote.astro  lom.astro  nicedinos13.astro  odinlarsson.astro
src/pages/en/: contact.astro  index.astro
src/pages/en/crew/: oscarsjodinjansson.astro  sepandsadraeijavahery.astro
src/pages/sv/: about.astro  contact.astro  contribute.astro  index.astro
src/planned pages/: crew.astro
src/planned pages/crew/: liamsporny.astro  odinlarsson.astro  sepandsadraeijavahery.astro
src/planned pages/en/crew/: liamsporny.astro
src/planned pages/sv/: crew.astro
src/planned pages/sv/crew/: odinlarsson.astro  oscarsjodinjansson.astro
