[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"], default-features = true }
stylist = { version = "0.12.1", features = ["yew_integration", "yew_use_media_query", "yew", "yew_use_style"] }